   being spoofed, allowing for more accurate priv checks when evaluating
   the format messages. Reported by Mercutio. [MG]
 * When spoofing (@pemit/spoof, etc), any errors for failed locks or bad
   object names incorrectly went to the object being spoofed, not the object
   doing the spoofing. [MG]
 * @lemit incorrectly ignored an = and anything after it in its arg. [MG]

Commands:
 * @edit/regexp[/all][/nocase], command version of regedit[all][i]().
   Suggested by Minion. [MG]
 * The @sql command no longer uses UNIMPLEMENTED_COMMAND when SQL
   support is not compiled into the MUSH. Instead, it just reports
   that no SQL db is available, like @mapsql does. [MG]
 * @slave, for restarting the info_slave and ssl_slave daemons from
   within the game. [SW]
 * @sockset <option>=<value>, for setting options on your descriptor.

Functions:
 * version() now reports svn revision/date where available. Patch by
   Padraic.
 * ldelete(), replace(), elements() and extract() now accept negative
   position arguments, to count backwards from the end of the list,
   similar to insert(). Suggested by Minion. [MG]
 * replace() now takes an optional output separator. [MG]
 * regmatch() now returns an error for invalid regexps, whether you're
   storing subpattern matches or not. Reported by Sketch. [MG]
 * time(), timefmt() and convsecs() can use symbolic timezones
   (US/Pacific, EST, etc.) if the host server has a time zone database
   installed. [SW]
 * playermem() and objmem() are smarter about calculating space being
   used by atributes [SW]
 * rnum() has been deprecated in favor of locate(). [SW]
 * step() no longer pads the final call with empty arguments, allowing you
   to use %+ or registers() to differentiate empty and missing args. [MG]
 * e() and exp() are now the same function internally, with e(), exp() and
   exp(1) all being equivilent. Suggested by Ari. [MG]
   
Version 1.8.5 patchlevel 0                                 Feb 12, 2012

Major changes: